# Hexapode

./: README.md  historique.txt  x et y.webm
hexa_gazebo_ros/: README.md
hexa_gazebo_ros/rrbot_control/: package.xml
hexa_gazebo_ros/rrbot_control/config/: rrbot_control.yaml
hexa_gazebo_ros/rrbot_control/launch/: rrbot_control.launch
hexa_gazebo_ros/rrbot_control/script/: fixe.py  mobile.py  zero.py
hexa_gazebo_ros/rrbot_description/: package.xml
hexa_gazebo_ros/rrbot_description/meshes/: cardan_bas1_2.dae  cardan_bas2_2.dae  cardan_bas3_2.dae  cardan_bas4_2.dae  cardan_bas5_2.dae  cardan_bas6_2.dae  croisillion_bas1.dae  croisillion_bas2.dae  croisillion_bas3.dae  croisillion_bas4.dae  croisillion_bas5.dae  croisillion_bas6.dae  croisillion_haut1.dae  croisillion_haut2.dae  croisillion_haut3.dae  croisillion_haut4.dae  croisillion_haut5.dae  croisillion_haut6.dae  verin_haut1.dae  verin_haut2.dae  verin_haut3.dae  verin_haut4.dae  verin_haut5.dae  verin_haut6.dae
hexa_gazebo_ros/rrbot_description/urdf/: rrbot.gazebo  rrbot.xacro  rrbot2.xacro
hexa_gazebo_ros/rrbot_gazebo/: package.xml
