<?xml version="1.0"?>
<package>
  <name>rrbot_control</name>
  <version>0.0.0</version>
  <description>The rrbot_control package</description>

  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD</license>
  
  <maintainer email="maelyslupin6@gmail.com">Maelys Lupin</maintainer>
  <author email="maelyslupin6@gmail.com">Maelys Lupin</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>controller_manager</run_depend>
  <run_depend>joint_state_controller</run_depend>
  <run_depend>robot_state_publisher</run_depend>

  <run_depend>rqt_gui</run_depend>
  <run_depend>effort_controllers</run_depend>


  <export>
  </export>

</package>
